# decision-focused-bike-rebalancing

./: .gitignore  config.yaml  pyproject.toml
Knapsack Problems/SPO/: knapsack_spo_explore.ipynb
POGOH/: config.yaml  runner.py
POGOH/Data/: explore_pogoh.ipynb  pogoh_trip_data.csv  trip_data.py
POGOH/data/raw/: pogoh_station_data.csv  pogoh_station_dist_min.csv
POGOH/src/data_collection/: trip_data.py
POGOH/src/features/: build_features.py
POGOH/src/models/: bike_rebalance.py  train.py
POGOH/src/utils/: data_utils.py
configs/: baseline.yaml  baseline_healthy_ride.yaml  decision.yaml  decision_healthy_ride.yaml  decision_healthy_ride_12hr.yaml  decision_pogoh.yaml  decision_pogoh_12hr.yaml  mse_healthy_ride.yaml  mse_pogoh.yaml  mse_pogoh_12hr.yaml
data/processed/: healthy_ride_input.parquet  healthy_ride_input_12hr.parquet  pogoh_input.parquet  pogoh_input_12hr.parquet  test.csv  train.csv
data/raw/: healthy_ride_station_dist_miles.parquet  healthy_ride_station_dist_min.parquet  healthy_ride_stations.parquet  pogoh_station_dist_miles.csv  pogoh_station_dist_miles.parquet  pogoh_station_dist_min.parquet  pogoh_stations.parquet
experiments/POGOH/20260427_155632/: config.yaml  results.parquet
notebooks/: explore_data.ipynb  healthy_ride_data.ipynb  report_plots.ipynb  test.ipynb
report/: decision_focused_bike_rebalancing.tex  neurips_2026.sty  references.bib
scripts/: download_data.py  run.py  run_routing.py  run_target.py
src/dfbr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dfbr/data/: dataset.py  station.py  station_data.py  trip.py
(+51 files in other folders)
