[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-focused-bike-rebalancing"
version = "0.1.0"
description = "Bike Rebalancing Predictive and Optimization Models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "pyyaml",
    "numpy",
    "pandas",
    "pyarrow",
    "requests",
    "ckanapi",
    "gurobipy",
    "pyepo",
    "matplotlib",
    "seaborn"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dfbr*"]